--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -61,13 +61,13 @@
             <!--Pivot item two-->
             <controls:PanoramaItem Header="Hall of Fame" Foreground="#FF181515">
                 <!--ContentPanel - place additional content here-->
-                <Grid x:Name="famegrid" Width="444" Height="630">
+                <Grid x:Name="famegrid" Width="444" Height="500">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <!--<Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshhalloffame" Stretch="Fill" VerticalAlignment="Top" />-->
-                    <ListBox x:Name="HallOfFameBox" Grid.Row="0" Margin="0,0,-12,0" ItemsSource="{Binding Items}" >
+                    <ListBox x:Name="HallOfFameBox" Grid.Row="0" Margin="0,0,-12,0" ItemsSource="{Binding Items}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="500">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation ="Horizontal" Height="80" Width="400">
