--- a/MyScience/Begin/MyScience/SubmissionPage.xaml
+++ b/MyScience/Begin/MyScience/SubmissionPage.xaml
@@ -32,7 +32,11 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" >
             <StackPanel Name="DynamicPanel" Orientation="Vertical">
                 <Image Name ="Photo" Width="320" Height="240"/>
                 <TextBlock Text="Time:" />
