fixed color of the progress bar. session persistency also implemented. yet to implement remember me button, and logout button

--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -24,7 +24,7 @@
     <Grid x:Name="LayoutRoot" Background="Transparent">
 
         <!--Pivot Control-->
-        <controls:Panorama Title=" " Foreground="#FF181515">
+        <controls:Panorama Title=" " Foreground="#FF181515" Name="MainPagePanorama">
             <controls:Panorama.Background>
                 <ImageBrush ImageSource="Images/myScienceOrange.png"/>
             </controls:Panorama.Background>
@@ -46,7 +46,7 @@
                     </Grid.RowDefinitions>
 
                     <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshproject" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshproject_MouseLeftButtonUp"  />
-                    <toolkit:PerformanceProgressBar Grid.Row ="1" Name="ProjectProgressBar" IsIndeterminate="False" Visibility="Collapsed"/>
+                    <toolkit:PerformanceProgressBar Grid.Row ="1" Name="ProjectProgressBar" IsIndeterminate="False" Visibility="Collapsed" Background="#FFFF6C16" Foreground="#FFFF6C16"/>
                     <ListBox Grid.Row="2" x:Name="MainListBox" Margin="0,30,-12,0" ItemsSource="{Binding Items}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="500" SelectionChanged="MainListBox_SelectionChanged" Foreground="#FF181515">
 
                         <ListBox.ItemTemplate>
@@ -71,7 +71,6 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <!--<Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshhalloffame" Stretch="Fill" VerticalAlignment="Top" />-->
-                    <toolkit:PerformanceProgressBar Grid.Row="0" Name="FameProgreeBar" VerticalAlignment="Bottom" Margin="0, 100, 35, 0" IsIndeterminate="False" Visibility="Collapsed"/>
                     <ListBox x:Name="HallOfFameBox" Grid.Row="1" Margin="0,10,0,0" ItemsSource="{Binding Items}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="500">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
@@ -95,56 +94,8 @@
             
             <!--Pivot item three-->
             <controls:PanoramaItem Header="Profile">
-                <Grid x:Name="profilegrid" Width="444" Height="630" Margin="0, -140, 0, 0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshprofile" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshprofile_MouseLeftButtonUp" />
-                    <toolkit:PerformanceProgressBar Grid.Row ="1" Name="ProfileProgressBar" IsIndeterminate="False" Visibility="Collapsed" />
-                    <!--ContentPanel - place additional content here-->
-                    <Grid x:Name="ContentPanel" Grid.Row="2" Margin="12,15,12,0" Width="409">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Grid Name="UserInfoPlusPic" Grid.Row="0" HorizontalAlignment="Left" Margin="12,0,0,0" VerticalAlignment="Top" Width="444">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Image Name="userPic" Grid.Column="0" Source="Images/unknownuser.jpg"  Height="160" Width="160" HorizontalAlignment="Left" Stretch="UniformToFill" VerticalAlignment="Top" MouseLeftButtonUp="userPic_MouseLeftButtonUp" />
-                            <Grid x:Name="UserInfoGrid" Grid.Column="1" Margin="13,0,49,0">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="59*"/>
-                                    <RowDefinition Height="59*" />
-                                </Grid.RowDefinitions>
-                                <TextBlock Name="userName" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Margin="0,-1,-1,0" />
-                                <TextBlock Name="score" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Margin="0,37,-1,0" Grid.RowSpan="2" />
-                                <TextBlock Grid.Row="1" Height="44" HorizontalAlignment="Center" Margin="0,35,-1,0" Name="scientistLevel" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Grid.RowSpan="2" />
-                            </Grid>
-                        </Grid>
-                    </Grid>
-                    <!--Grid Name="ActiveProjectsGrid" Grid.Row="1" HorizontalAlignment="Left" Margin="12,16,0,0" VerticalAlignment="Top" Width="444" Height="95">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <TextBlock x:Name="UserProjectsText" Text="Active Projects" Style="{StaticResource PhoneTextExtraLargeStyle}" TextAlignment="Center" Grid.Row="0" />
-                        <ListBox x:Name="ProjectListBox" Grid.Row="1" ItemsSource="{Binding Items}" SelectionChanged="ProjectListBox_SelectionChanged" Margin="0,0,0,-213" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="246" Width="446">
-                            <ListBox.ItemTemplate>
-                                <DataTemplate>
-                                    <StackPanel Margin="0,0,0,17" Width="432">
-                                        <TextBlock Text="{Binding LineOne}" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}"/>
-                                        <TextBlock Text="{Binding LineTwo}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </ListBox.ItemTemplate>
-                        </ListBox>
-                    </Grid-->
-                </Grid>
+                <!--<Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshhalloffame" Stretch="Fill" VerticalAlignment="Top" />-->
+            	<toolkit:PerformanceProgressBar x:Name="FameProgreeBar" VerticalAlignment="Bottom" Margin="0,0,11,505" IsIndeterminate="False" Visibility="Collapsed" Foreground="#FFFF6C16" Background="#FFFF6C16"/>
             </controls:PanoramaItem>
 
             <!--<controls:PanoramaItem Header="Your Data">
@@ -184,7 +135,7 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshyourdata2" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshyourdata2_MouseLeftButtonUp" />
-                    <toolkit:PerformanceProgressBar Grid.Row="1" Name="DataProgreeBar" IsIndeterminate="False" Visibility="Collapsed"/>
+                    <toolkit:PerformanceProgressBar Grid.Row="1" Name="DataProgreeBar" IsIndeterminate="False" Visibility="Collapsed" Background="#FFFF6C16" Foreground="#FFFF6C16"/>
                     <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="2">
                     <ItemsControl Name="PictureWall" Margin="0,30,-12,0" ItemsSource="{Binding Items}">
                         <ItemsControl.ItemTemplate>
@@ -210,7 +161,7 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Image Grid.Row="0" Height="50" Width="50" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshtobesubmit" Stretch="Fill" VerticalAlignment="Top"  />
-                    <toolkit:PerformanceProgressBar Grid.Row="1" Name="QueueProgreeBar" IsIndeterminate="False" Visibility="Collapsed"/>
+                    <toolkit:PerformanceProgressBar Grid.Row="1" Name="QueueProgreeBar" IsIndeterminate="False" Visibility="Collapsed" Foreground="#FFFF6C16" Background="#FFFF6C16"/>
                     <ListBox x:Name="ToBeSubmitBox" Grid.Row="2" Margin="0, 30,-12,0" ItemsSource="{Binding Items}" Visibility="Collapsed" SelectionChanged="ToBeSubmitBox_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="500">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
