--- a/MyScience/Begin/MyScience/App.xaml
+++ b/MyScience/Begin/MyScience/App.xaml
@@ -6,10 +6,12 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:UriMapper="clr-namespace:System.Windows.Navigation;assembly=Microsoft.Phone"
     mc:Ignorable="d">
 
     <!--Application Resources-->
     <Application.Resources>
+
         <Style x:Key="WhiteBackgroundButtonStyle" TargetType="Button">
             <Setter Property="Template">
                 <Setter.Value>
