--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -63,14 +63,14 @@
             </controls:PanoramaItem>
 
             <!--Pivot item two-->
-            <controls:PanoramaItem Header="Hall of Fame" Foreground="#FF181515">
+            <controls:PanoramaItem Header="Top Users" Foreground="#FF181515">
                 <!--ContentPanel - place additional content here-->
                 <Grid x:Name="famegrid" Width="444" Height="630" Margin="0, -140, 0, 0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <!--<Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshhalloffame" Stretch="Fill" VerticalAlignment="Top" />-->
+                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshhalloffame" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshhalloffame_MouseLeftButtonUp" />
                     <toolkit:PerformanceProgressBar Grid.Row="0" Name="FameProgreeBar" VerticalAlignment="Bottom" Margin="0, 100, 35, 0" IsIndeterminate="False" Visibility="Collapsed" Foreground="#FFFF6C16" Background="#FFFF6C16"/>
                     <ListBox x:Name="HallOfFameBox" Grid.Row="1" Margin="0,10,0,0" ItemsSource="{Binding Items}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="500">
                         <ListBox.ItemTemplate>
@@ -126,6 +126,7 @@
                                 <TextBlock Grid.Row="1" Height="44" HorizontalAlignment="Center" Margin="0,35,-1,0" Name="scientistLevel" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Grid.RowSpan="2" />
                             </Grid>
                         </Grid>
+                        <Button Content="logout" Height="78" HorizontalAlignment="Left" Margin="230,147,0,0" Name="logoutButton" VerticalAlignment="Top" Width="185" Background="{StaticResource PhoneTextBoxReadOnlyBrush}" Style="{StaticResource WhiteBackgroundButtonStyle}" Grid.RowSpan="2" Click="logoutButton_Click" Foreground="Black" />
                     </Grid>
                     <!--Grid Name="ActiveProjectsGrid" Grid.Row="1" HorizontalAlignment="Left" Margin="12,16,0,0" VerticalAlignment="Top" Width="444" Height="95">
                         <Grid.RowDefinitions>
@@ -203,7 +204,7 @@
                 </Grid>
             </controls:PanoramaItem>
 
-            <controls:PanoramaItem Header="Submission Queue">
+            <controls:PanoramaItem Header="To Submit">
                 <Grid x:Name="tobesubmitgrid" Width="444" Height="630" Margin="0, -140, 0, 0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
