--- a/MyScience/Begin/MyScience/DetailsPage.xaml
+++ b/MyScience/Begin/MyScience/DetailsPage.xaml
@@ -14,9 +14,9 @@
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="False" Loaded="DetailsPage_Loaded" xmlns:my="clr-namespace:Microsoft.Phone.Controls.Maps;assembly=Microsoft.Phone.Controls.Maps">
 
-    <!--LayoutRoot contains the root grid where all other page content is placed-->
+    <!--LayoutRoot contains the root grid where all other page content is placed Foreground="#FFFF6C16" Foreground="{StaticResource PhoneAccentBrush}"-->
     <Grid x:Name="LayoutRoot" Height="1000">
-        <controls:Pivot Name ="ProjectPivot">
+        <controls:Pivot Name ="ProjectPivot" Foreground="#FFFF6C16">
             
             <!--Panorama item one-->
             <controls:PivotItem Header="Submission">
@@ -35,9 +35,24 @@
 
             <!--Panorama item three-->
             <controls:PivotItem Header="About">
-                <ScrollViewer VerticalScrollBarVisibility="Auto">
+				<Grid x:Name="aboutgrid" Width="444" Height="630" Margin="0, -240, 0, 0" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>												
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Name="BackgroundTitle" TextWrapping="Wrap" Text="Description" VerticalAlignment="Top" Margin="8,30,143,0" Height="60" FontSize="30" Foreground="#FFFF6C16" />
+					<TextBlock Grid.Row="1" Name="BackgroundContent" Margin="8,0,21,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="71" Foreground="White" FontSize="24" Text="... include motivations for this project here..."/>
+                    <TextBlock Grid.Row="2" Name="InstructionsTitle" TextWrapping="Wrap" Text="Instructions" VerticalAlignment="Top" Margin="8,30,143,0" Height="60" FontSize="30" Foreground="#FFFF6C16"/>
+					<TextBlock Grid.Row="3" Name="InstructionsContent" Margin="8,0,21,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="71" Foreground="White" FontSize="24" Text="... include here instructions for gathering proper data for the project..."/>
+					<TextBlock Grid.Row="4" Name="AuthorField" Margin="8,20,21,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="71" Foreground="#FFC8C8C8" FontSize="24" TextAlignment="Right" Text="Author" FontStyle="Italic"/>
+				</Grid>
+				
+                <!--ScrollViewer VerticalScrollBarVisibility="Auto">
                     <StackPanel Height="626" HorizontalAlignment="Left" Margin="0,6,0,0" Name="InfoPanel" VerticalAlignment="Top" Width="400"></StackPanel>
-                </ScrollViewer>
+                </ScrollViewer-->
             </controls:PivotItem>
 
             <!--controls:PanoramaItem Header="Submission">
